--- a/web-dev/index.html
+++ b/web-dev/index.html
@@ -1,13 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>My Blog</title>
-        <link rel="stylesheet" href="style.css">
-    </head>
-    <body>
-    </body>
-    <script src="index.js"></script>
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Cool clicker game</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="Icon.jpeg">
+</head>
+
+<body>
+    <h1> Game thing woo </h1>
+
+    <div class="container">
+
+        <div>
+            <h2> Button! </h2>
+            <h3 id="profit">
+                Profit: 0
+            </h3>
+
+
+            <button id="button">
+                <img src="Icon.jpeg">
+            </button>
+        </div>
+
+
+        <div>
+            <h3 id="shop">
+                <h2> Shop! </h2>
+                <div id="item1">
+                    <div id="item1_text">
+                        Traders: 0
+                    </div>
+
+                    <div id="item1_cost">
+                        Cost: 10
+                    </div>
+
+                    <button id="item1_button">
+                        Buy
+                    </button>
+                </div>
+
+                <div id="item2">
+                    <div id="item2_text">
+                        Taylor Roberts
+                    </div>
+
+                    <div id="item2_cost">
+                        Cost: 1,000
+                    </div>
+
+                    <button id="item2_button">
+                        Buy
+                    </button>
+                </div>
+
+
+            </h3>
+        </div>
+    </div>
+
+    <div class="disclaimer"> copyright goes to Jane Street or something please dont sue me </div>
+
+
+</body>
+
+<script src="index.js"></script>
+
 </html>
